web: Fix button styling on iOS

--- a/module/web-emu/styles/_emulator_keypad.scss
+++ b/module/web-emu/styles/_emulator_keypad.scss
@@ -40,6 +40,8 @@
 			transition: background-color $animation-time ease, color $animation-time ease;
 			cursor: pointer;
 
+			@include custom-button;
+
 			&:hover,
 			&.pressed {
 				background: $toolbar-button-background-hover;
